# Oneshot-Gen-Skill

./: .gitignore  README.md
video-gen-cli/: .gitignore  pyproject.toml  requirements.txt
video-gen-cli/config/: batch_example.yaml
video-gen-cli/scripts/: datastore_cli.py
video-gen-cli/src/video_gen/: __init__.py
video-gen-cli/src/video_gen/agent_tools/: __init__.py
video-gen-cli/src/video_gen/cli/: __init__.py  batch_manager.py  config.py  credential_manager.py  gen_interactive.py  generator.py  main.py  preset_manager.py  task_manager.py
video-gen-cli/src/video_gen/core/: __init__.py  batch_engine.py  data_store.py  engine.py  errors.py  types.py
video-gen-cli/src/video_gen/optimizers/: __init__.py  base.py  llm_optimizer.py  rule_optimizer.py
video-gen-cli/src/video_gen/presets/: __init__.py  base.py  composer.py  custom_loader.py  registry.py  validator.py
video-gen-cli/src/video_gen/presets/camera_movement/: __init__.py  gimbal.py  handheld.py  shuttle.py
video-gen-cli/src/video_gen/providers/: __init__.py  base.py  jimeng.py  jimeng_status.py  kling.py  router.py
video-gen-cli/tests/: conftest.py  test_agent_tools.py  test_custom_loader.py  test_optimizers.py  test_presets.py  test_providers.py
video-gen-cli/tests/integration/: test_flow.py
video-gen-cli/tests/test_cli/: test_gen_interactive.py
video-gen-cli/tests/test_core/: test_batch_engine.py  test_data_store.py
video-gen-gui/src-tauri/: Cargo.toml  tauri.conf.json
video-gen-gui/src-tauri/icons/: icon.icns
video-gen-gui/src-tauri/output/prompts/: prompt_20260422_200150.txt
video-gen-gui/src-tauri/src/: commands.rs  commands_backup.rs  lib.rs  main.rs  types.rs
(+32 files in other folders)
